--- a/screen/BUILD
+++ b/screen/BUILD
@@ -1,7 +1,6 @@
 #!/bin/bash
-scriptdir="$(cd $(dirname $0) && pwd)"
-. $scriptdir/../lib/build-common.sh
 
+scriptdir="$(cd $(dirname $0) && pwd)"
 set -e
 
 upstream=https://git.savannah.gnu.org/git/screen.git
@@ -11,6 +10,19 @@ srcpath=$srcdir/src/
 
 configpath=src/configure
 
-################################################################
+pre_tag_hook () {
+    # in $srcdir
+    (cd src && git rm --cached configure Makefile doc/screen.info-1 doc/screen.info-2 doc/screen.info doc/screen.info-4 doc/screen.info-5 doc/screen.info-3)
+    git commit -m "Remove generated files" -a
+}
+
+post_configure_hook () {
+    if ! grep "undef BUGGYGETLOGIN" config.h ; then
+        >&2 echo "BUILD: Something went wrong, configure didn't undef BUGGYGETLOGIN";
+        exit 1;
+    fi
+}
+
+. $scriptdir/../lib/build-common.sh
 
 eval "$@"
