Build changes: autoconf, configpath

--- a/screen/BUILD
+++ b/screen/BUILD
@@ -8,12 +8,16 @@ patchbase=44c5ed24c49b4e78abdf5192abed85885eefce68 # 4.0.2
 srcdir=screen.git
 srcpath=$srcdir/src/
 
-configpath=src/configure
+#configpath=src/configure
 
 pre_tag_hook () {
     # in $srcdir
     (cd src && git rm --cached configure Makefile doc/screen.info-1 doc/screen.info-2 doc/screen.info doc/screen.info-4 doc/screen.info-5 doc/screen.info-3)
     git commit -m "Remove generated files" -a
+}
+
+pre_configure_hook () {
+    autoconf
 }
 
 post_configure_hook () {
