Fix OCaml build

--- a/unison/BUILD
+++ b/unison/BUILD
@@ -13,7 +13,7 @@ configpath=
 OCAMLDIR=ocaml-4.08.1
 
 post_clone_hook () {
-    wget 'https://caml.inria.fr/distrib/ocaml-4.08/'$OCAMLDIR.tar.xz
+    wget -c 'https://caml.inria.fr/distrib/ocaml-4.08/'$OCAMLDIR.tar.xz
     tar -xf $OCAMLDIR.tar.xz
 #    cd $OCAMLDIR
 }
@@ -22,11 +22,19 @@ do_configure () {
     (cd ../$OCAMLDIR && ./configure -prefix $PREFIX)
 }
 
+# note that we usually only need PREFIX for install, here we need it
+# for build as well
 do_build () {
-    (cd $OCAMLDIR &&
-         #make world &&
-         make --debug=v world.opt &&
-         make install)
+    if [ -f .built-ocaml ]; then
+        warn "Already built OCaml, delete .built-ocaml to regenerate"
+    else
+        (cd $OCAMLDIR &&
+             #make world &&
+             #make --debug=v world.opt &&
+             make world.opt &&
+             make install)
+        touch .built-ocaml
+    fi
     # use the ocaml binaries we just built
     export PATH=$PREFIX/bin:$PATH
     # build unison
@@ -34,7 +42,7 @@ do_build () {
 }
 
 do_install () {
-    make -C $srcdir install INSTALLDIR=$PREFIX/bin
+    make -C $srcdir install INSTALLDIR=$PREFIX/bin/
 }
 
 . $scriptdir/../lib/build-common.sh
