Note patchbase commit

--- a/r/BUILD
+++ b/r/BUILD
@@ -6,6 +6,12 @@ set -e
 upstream=https://github.com/wch/r-source/
 #patchbase=9a003136dfcc2c1fda29abe50565e301a814cf5c # this one disappeared!
 patchbase=a0b8a1a2ef04c15a5ca5e91525f7e5fa68540502
+# commit a0b8a1a2ef04c15a5ca5e91525f7e5fa68540502
+# Author: ripley <ripley@00db46b3-68df-0310-9c12-caf00c1e9a41>
+# Date:   Sat Dec 28 07:07:59 2019 +0000
+#     git-svn-id: https://svn.r-project.org/R/trunk@77624 00db46b3-68df-0310-9c12-caf00c1e9a41
+
+
 #patchbase=HEAD # NE 30 Dec 2019 does this not work?
 srcdir=r-source
 srcpath=$srcdir
