Point to gchini's all_patches

--- a/pulseaudio/BUILD
+++ b/pulseaudio/BUILD
@@ -7,8 +7,10 @@
 scriptdir="$(cd $(dirname $0) && pwd)"
 set -e
 
-upstream=https://gitlab.freedesktop.org/gchini/pulseaudio.git/
-patchbase=52104615db9e312d768f49713ac2a7029f706678 # Fri Jul 12 09:33:01 2019
+#https://gitlab.freedesktop.org/gchini/pulseaudio/tree/all_patches
+upstream=https://gitlab.freedesktop.org/gchini/pulseaudio/
+patchbase=b08561af0b770459f3eb2197479e5afec0244eb4 # Thu Jan 16 19:14:08 2020 +0100
+#patchbase=52104615db9e312d768f49713ac2a7029f706678 # Fri Jul 12 09:33:01 2019
 #patchbase=44c5ed24c49b4e78abdf5192abed85885eefce68 # 4.0.2
 srcdir=pulseaudio.git
 srcpath=$srcdir
@@ -17,8 +19,8 @@ configpath=src/configure
 
 post_clone_hook () {
     (cd $srcdir &&
-         git fetch "https://gitlab.freedesktop.org/gchini/pulseaudio.git" "rewind_fixes" &&
-         git checkout -b "gchini/pulseaudio-rewind_fixes" FETCH_HEAD
+         git fetch "https://gitlab.freedesktop.org/gchini/pulseaudio.git" "all_patches" &&
+         git checkout -b all_patches FETCH_HEAD
     )
 }
 
