--- a/tetris/BUILD
+++ b/tetris/BUILD
@@ -11,6 +11,8 @@ srcpath=$srcdir
 configpath=
 
 do_build () {
+    (cd $buildpath/tetris && >&2 echo Writing tags &&
+        etags *.h *.c)
     make -C $buildpath ./tetris/tetris
 }
 
